--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <span class="subheader-text">My Background / About Me</span>
         <div class="about-section-content">
           <div class="body-text">I am a 16 year old student and I love working and exploring computers, programming, software, etc. I made this site so I can document my projects and share it with others.</div>
-          <div class="body-text">I'll try keep this page updating through my studies and document as much as I can</div>
+          <div class="body-text">I'll try keep this page updating through my studies and document as much as I can.</div>
         </div>
       </div>
 
