Linked project pages to index.html

--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@
                 - PROJECT_PAGE_NAME.html: the html filename for the project (must be in project-pages folder)
           -->
           <div class="project-card">
-            <img src="./assets/images/crashed.jpeg" class="project-image">
+            <img src="./assets/images/Screenshot 2023-05-04 at 2.59.28 pm.png" class="project-image">
             <div class="project-card-text-container">
-              <div class="subheader-text project-title">Project Name</div>
-              <div class="body-text project-card-text">--insert project here lol--</div>
+              <div class="subheader-text project-title">This Website!</div>
+              <div class="body-text project-card-text">My first documented project happens to be this site!</div>
             </div>
-            <a class="button" href="./project-pages/project-template.html">
+            <a class="button" href="./project-pages/ThisWebsite.html">
               <span class="button-text">Read More</span>
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
             </a>
