Added Xbox project page

--- a/project-pages/xbox.html
+++ b/project-pages/xbox.html
@@ -68,8 +68,8 @@
             - Change the 'body-text' text to a short and sweet description of your project (maybe the same as the one on the project card)
             - Change "desktop.jpeg" to the image filename you uploaded in the assets/images folder.
           -->
-        <div class="main-title">This Website!</div>
-        <div class="body-text">I created this website to store all of my projects and document my learning.</div>
+        <div class="main-title">Watercooled Xbox360!</div>
+        <div class="body-text">I made a watercooled xbox360 purely for fun.</div>
         <image class="project-header-image" src="../assets/images/Screenshot 2023-05-04 at 2.59.28 pm.png">
       </div>
 
@@ -82,9 +82,9 @@
       -->
       <div id="project-details">
         <div class="subheader-text">Project Overview</div>
-        <div class="date-text">3/5/2023</div>
+        <div class="date-text">7/4/2022</div>
         <div class="project-details-content">
-          <div class="body-text">Hi, welcome to my first project I'm documenting which happens to be this site. I am a student so I was looking at the github student developer pack and I discovered there was several reasources to host and explore the idea of hosting my own small blog/portfolio. I managed to find a domain with one of the included providers and github has it's own github pages hosting which is free. I looked into several jekyll themes that I could work off and initially I found Al-Folio which seemed like a good start but I discovered it uses several plugins that the github deployment system does not support. Normally this wouldn't be an issue as I could clone the repo to my own computer and push it up to github once I had finished working on it but as I was doing this on my school laptop it forced me to use exclusively online tools. Enter ndoherty's folio template which doesn't include any plugins and looks extremely clean. I picked his repo and cloned it and this was when I discovered as part of the Student Pack it includes github pro for as long as I am in school. In turn, this lets me use <a href="github.dev">github.dev</a> as a fully fledged code editor. I have been learning html and css in my software classes at school so this was a nice exercise, analysing and understanding how the site is setup while editing it to be what I want.</div>
+          <div class="body-text">The Xbox360 is one of the most well known video game consoles as gaming was rising in popularity very quickly at that time. I bought several xboxs and spent some nights messing around and learning how to mod them with RGH glitches and get my own software on it. This allowed for ISO games and other homebrew applications to run. This wasn't enough for me so I came up with the unnecessary idea of watercooling it. I decided to go with a Cougar AIO as it had a mounting bracket that had a similar mounting location to the stock cooler. Once it had arrived, I cut the mounting bracket to fit and it sat on the cpu flawlessly. I then created the supporting modifications to the case and cut out a hole for the AIO to be visible. The power was initially intended to run off the inbuilt power lines but the increased power draw from the pump and RGB lights caused instability so I resorted to using a external 12V power supply directly wired up to the AIO. Along with the extreme cooling I modified the xbox with a Ace V1 chip to preform a RGH glitch and allow for modding. The project turned out quite successful and it was very fun to run through the whole process of idea to research then creating it and finally being able to admire the final product. Unfortunately most of the photos I had were lost and not backed up but the ones that I do have are attached below.  </div>
         </div>
       </div>
 
@@ -118,14 +118,14 @@
             -->
           
            
-            <div class="gallery-image-container">
-              <img src="../assets/images/Screenshot 2023-05-04 at 2.59.28 pm.png" class="gallery-image">
-              <span class="image-caption">Home page</span>
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/2EA205D0-D3E2-47FB-9753-F48410C7022C.JPG" class="gallery-image">
+              <span class="image-caption">Low Res Photo that I found.</span>
             </div>
 
-            <div class="gallery-image-container">
-              <img src="../assets/images/me.png" class="gallery-image">
-              <span class="image-caption">A pixel art potrait of me.</span>
+            <div class="gallery-image-container half-width">
+              <img src="../assets/images/83D81238-4301-4521-B9FA-5A39E57958E4.JPG" class="gallery-image">
+              <span class="image-caption">Slightly better photo on a very messy desk.</span>
             </div>
         </div>
       </div>
