--- a/project-pages/xbox.html
+++ b/project-pages/xbox.html
@@ -70,7 +70,7 @@
           -->
         <div class="main-title">Watercooled Xbox360!</div>
         <div class="body-text">I made a watercooled xbox360 purely for fun.</div>
-        <image class="project-header-image" src="../assets/images/Screenshot 2023-05-04 at 2.59.28 pm.png">
+        <image class="project-header-image" src="../assets/images/2EA205D0-D3E2-47FB-9753-F48410C7022C.JPG">
       </div>
 
       <!-- PROJECT DETAILS -->
