--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
             </a>
           </div>
           <div class="project-card">
-            <img src="./assets/images/crashed.jpeg" class="project-image">
+            <img src="./assets/images/proxmox.png" class="project-image">
             <div class="project-card-text-container">
-              <div class="subheader-text project-title">Project Name</div>
-              <div class="body-text project-card-text">--insert project here lol--</div>
+              <div class="subheader-text project-title">Proxmox Server</div>
+              <div class="body-text project-card-text">An ongoing project with a focus on learning abour Hypervisors, linux, virtual machines and more.</div>
             </div>
-            <a class="button" href="./project-pages/project-template.html">
+            <a class="button" href="./project-pages/ProxmoxServer.html">
               <span class="button-text">Read More</span>
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
             </a>
