--- a/project-pages/ProxmoxServer.html
+++ b/project-pages/ProxmoxServer.html
@@ -22,7 +22,7 @@
 
       This should be the same across all pages.
      -->
-     <link rel="icon" href="../assets/images/me.png" />
+     <link rel="icon" href="../assets/images/proxmox.png" />
      <title>My Portfolio</title>
     <meta name="description" content="A portfolio.">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
