--- a/project-pages/ProxmoxServer.html
+++ b/project-pages/ProxmoxServer.html
@@ -1,11 +1,3 @@
-!-- 
-  IMPORTANT! 
-  
-  Keep this file unchanged to use as a template for all future project pages. 
-
-  For every new project you add to your portfolio, make a copy of this file in the
-  'project-pages' folder with a name related to the project.
--->
 
 
 <!DOCTYPE html>
@@ -22,7 +14,7 @@
 
       This should be the same across all pages.
      -->
-     <link rel="icon" href="../assets/images/proxmox.png" />
+     <link rel="icon" href="../assets/images/me.png" />
      <title>My Portfolio</title>
     <meta name="description" content="A portfolio.">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -68,7 +60,7 @@
           -->
         <div class="main-title">Proxmox Server!</div>
         <div class="body-text">Documenting my process of exploring homelabs and proxmox servers.</div>
-        <image class="project-header-image" src="../assets/images/Screenshot 2023-05-04 at 2.59.28 pm.png">
+        <image class="project-header-image" src="../assets/images/proxmox.png">
       </div>
 
       <!-- PROJECT DETAILS -->
