--- a/index.html
+++ b/index.html
@@ -149,6 +149,17 @@
               <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
             </a>
           </div>
+          <div class="project-card">
+            <img src="./assets/images/proxmox.png" class="project-image">
+            <div class="project-card-text-container">
+              <div class="subheader-text project-title">Proxmox Server</div>
+              <div class="body-text project-card-text">An ongoing project with a focus on learning abour Hypervisors, linux, virtual machines and more.</div>
+            </div>
+            <a class="button" href="./project-pages/ProxmoxServer.html">
+              <span class="button-text">Read More</span>
+              <image src="./assets/icons/arrow-right.svg" class="right-arrow-icon"/>
+            </a>
+          </div>
         </div>
       </div>
     </div>
