--- a/project-pages/ProxmoxServer.html
+++ b/project-pages/ProxmoxServer.html
@@ -58,7 +58,7 @@
             - Change the 'body-text' text to a short and sweet description of your project (maybe the same as the one on the project card)
             - Change "desktop.jpeg" to the image filename you uploaded in the assets/images folder.
           -->
-        <div class="main-title">Proxmox Server!</div>
+        <div class="main-title">Homelab Adventures!</div>
         <div class="body-text">Documenting my process of exploring homelabs and proxmox servers.</div>
         <image class="project-header-image" src="../assets/images/proxmox.png">
       </div>
@@ -72,10 +72,13 @@
       -->
       <div id="project-details">
         <div class="subheader-text">Project Overview</div>
-        <div class="date-text">6/5/2023-ongoing</div>
+        <div class="date-text">6/5/2023-ongoing. Last update 15/5/2023</div>
         <div class="todo-text">ToDo: keep documenting, format text properly</div>
         <div class="project-details-content">
-          <div class="body-text">I was browsing reddit and a few weeks ago I discovered <a href="https://www.reddit.com/r/homelab/">r/homelab</a> and found it extremely interesting. I began following the community and reading up on as much as I could. After a week or so of researching and understanding how and what I would need to make my own, I began asking around and managed to get a computer off one of my good friends. It is extremely overkill for my use case of learning and messing around but it also gives me a lot of headroom. I ordered some parts that I needed and built the computer over the weekend. After dealing with some ram issues I managed to get the setup process for Proxmox running. I went through the process and assigned it a static IP address from my network so I wouldn't have any issues later. I logged in to the web GUI and began exploring the different menus and settings until I was confident enough to start setting up my own virtual machines. My first first virtual machine set up was ubuntu server to run my docker containers. I decided to go with a VM instead of a LXC so later down the line if I decided to open it up to the internet I would have more security and flexibilty. The VNC was a awesome feature and allowed me to run the ubuntu server setup quickly and flawlessly. This is where I'm up to at this time of writing, 7/5/2023. More to come...</div>
+          <div class="body-text">I was browsing reddit and a few weeks ago I discovered <a href="https://www.reddit.com/r/homelab/">r/homelab</a> and found it extremely interesting. I began following the community and reading up on as much as I could. After a week or so of researching and understanding how and what I would need to make my own, I began asking around and managed to get a computer off one of my good friends. It is extremely overkill for my use case of learning and messing around but it also gives me a lot of headroom. I ordered some parts that I needed and built the computer over the weekend. After dealing with some ram issues I managed to get the setup process for Proxmox running. I went through the process and assigned it a static IP address from my network so I wouldn't have any issues later. I logged in to the web GUI and began exploring the different menus and settings until I was confident enough to start setting up my own virtual machines. My first first virtual machine set up was ubuntu server to run my docker containers. I decided to go with a VM instead of a LXC so later down the line if I decided to open it up to the internet I would have more security and flexibilty. The VNC was a awesome feature and allowed me to run the ubuntu server setup quickly and flawlessly. This is where I'm up to at this time of writing, 7/5/2023.>
+          <br>
+          <div class="body-text">My first virtual machine that I set up last time was going to host my docker containers. The first thing I did while going through the ubuntu server setup was select docker to be pre-installed. This sped up the process and once the server was done docker was already installed. I then installed portainer to allow me to have a GUI to manage and create the other containers. The second container I set up was uptime kuma so I could track any issues and crashes. In the process I created a telegram bot that sent me a notification whenever any of the server's status changed. The next container I want to set up is a vpn into my home network. Looking at tutorials and videos, this seems like a bit more of a challenge that the other containers so I'll give it a go when I have more time. 15/5/2023</div>
+        </div>
         </div>
       </div>
 
